--- a/src/components/Players/Players.module.css
+++ b/src/components/Players/Players.module.css
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-width: 10rem;
+  min-width: 8rem;
   padding: var(--space-2xs) var(--space-2xs);
   border-radius: var(--space-2xs);
   background-color: var(--clr-primary-100);
@@ -56,7 +56,7 @@
   position: absolute;
   left: 50%;
   width: 100%;
-  transform: translate(-50%, 250%);
+  transform: translate(-50%, 200%);
   transition: color 250ms ease;
   transition-delay: 1000ms;
   font-size: 0.75rem;
