--- a/src/components/TokenButton/TokenButton.module.css
+++ b/src/components/TokenButton/TokenButton.module.css
@@ -2,8 +2,8 @@
   position: relative;
   display: grid;
   place-items: center;
-  min-width: var(--space-l-xl);
-  min-height: var(--space-l-xl);
+  width: clamp(0.88rem, calc(-0.12rem + 5vw), 3.75rem);
+  height: clamp(0.88rem, calc(-0.12rem + 5vw), 3.75rem);
   font-size: var(--step-2);
 }
 
