--- a/src/composition.css
+++ b/src/composition.css
@@ -49,13 +49,3 @@
 .switcher > :nth-last-child(n + 4) ~ * {
   flex-basis: 100%;
 }
-
-/* https://every-layout.dev/layouts/box/ */
-
-.box {
-  padding: var(--padding, var(--space-m));
-  border: var(--border, 1px) solid var(--bg, currentColor);
-  border-radius: var(--radius, var(--space-xs));
-  background-color: var(--bg, var(--clr-neutral-100));
-  color: var(--fg, var(--clr-primary-400));
-}
